--- a/resources/assets/sass/styles/tips.scss
+++ b/resources/assets/sass/styles/tips.scss
@@ -1,5 +1,9 @@
 .modal, .dropdown-menu { -webkit-overflow-scrolling: touch; }
 
+.bottom-fixed {
+	z-index: 1;
+}
+
 
 a:focus, button:focus, input:focus, .btn:focus {
 	-webkit-box-shadow: none;
@@ -122,7 +126,7 @@ button .btn .btn-white .dropdown-toggle:focus {
 	span {
 		background: #808080;
 		background: linear-gradient(#B6BAC9 0%, #808080 100%);
-		font-size: 9px;
+		font-size: .6em;
 		font-weight: bold;
 		color: #FFF;
 		text-transform: uppercase;
